Fix bug with side nav z-index

--- a/src/scss/layouts/_layout.scss
+++ b/src/scss/layouts/_layout.scss
@@ -79,6 +79,7 @@
 
 md-sidenav {
   overflow: visible;
+  z-index: 1001!important;
 }
 
 .form-section.current {
